--- a/notebook/GroupChat_get_latest_pr_from_mlnet.ipynb
+++ b/notebook/GroupChat_get_latest_pr_from_mlnet.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.4-6632779574</span></li><li><span>AgentChat.DotnetInteractiveFunction, 0.2.4-6632779574</span></li><li><span>AgentChat.Example.Share, 0.2.4-6632779574</span></li><li><span>AgentChat.GPT, 0.2.4-6632779574</span></li></ul></div></div>"
+       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.7</span></li><li><span>AgentChat.DotnetInteractiveFunction, 0.2.7</span></li><li><span>AgentChat.Example.Share, 0.2.7</span></li><li><span>AgentChat.GPT, 0.2.7</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -321,12 +321,13 @@
       "\n",
       "Message from Admin\n",
       "--------------------\n",
-      "Great job, Runner! You have successfully retrieved the list of pull requests for the mlnet repo. The latest pull request is:\n",
+      "Great job, Runner! You have successfully retrieved the list of pull requests for the mlnet repo. The latest pull request is: \n",
+      "\n",
       "URL: https://api.github.com/repos/dotnet/machinelearning/pulls/6872\n",
       "ID: 1568971683\n",
       "Node ID: (...too long to present)\n",
       "\n",
-      "Now, let's move on to the next step. Print the result to the console and save the result to a file named \"pr.txt\".\n",
+      "Let's move on to the next step: parsing the response JSON to extract the latest pull request.\n",
       "\n",
       "--------------------\n",
       "\n",
@@ -334,8 +335,8 @@
       "--------------------\n",
       "```csharp\n",
       "using System;\n",
-      "using System.IO;\n",
       "using System.Net.Http;\n",
+      "using System.Text.Json;\n",
       "using System.Threading.Tasks;\n",
       "\n",
       "var apiUrl = \"https://api.github.com/repos/dotnet/machinelearning/pulls\";\n",
@@ -353,14 +354,16 @@
       "    }\n",
       "}\n",
       "\n",
-      "async Task Main()\n",
+      "async Task<string> GetLatestPullRequest()\n",
       "{\n",
       "    var pullRequests = await GetPullRequests();\n",
-      "    Console.WriteLine(pullRequests);\n",
-      "    File.WriteAllText(\"pr.txt\", pullRequests);\n",
+      "    var jsonDocument = JsonDocument.Parse(pullRequests);\n",
+      "    var latestPullRequest = jsonDocument.RootElement[0];\n",
+      "    return latestPullRequest.ToString();\n",
       "}\n",
       "\n",
-      "await Main();\n",
+      "var latestPullRequest = await GetLatestPullRequest();\n",
+      "Console.WriteLine(latestPullRequest);\n",
       "```\n",
       "\n",
       "\n",
@@ -368,37 +371,139 @@
       "\n",
       "function name: RunCode\n",
       "raw function call: {\n",
-      "  \"code\": \"using System;\\r\\nusing System.IO;\\r\\nusing System.Net.Http;\\r\\nusing System.Threading.Tasks;\\r\\n\\r\\nvar apiUrl = \\\"https://api.github.com/repos/dotnet/machinelearning/pulls\\\";\\r\\nvar userAgent = \\\"MyApp\\\";\\r\\n\\r\\nasync Task<string> GetPullRequests()\\r\\n{\\r\\n    using (var client = new HttpClient())\\r\\n    {\\r\\n        client.DefaultRequestHeaders.Add(\\\"User-Agent\\\", userAgent);\\r\\n        var response = await client.GetAsync(apiUrl);\\r\\n        response.EnsureSuccessStatusCode();\\r\\n        var responseBody = await response.Content.ReadAsStringAsync();\\r\\n        return responseBody;\\r\\n    }\\r\\n}\\r\\n\\r\\nasync Task Main()\\r\\n{\\r\\n    var pullRequests = await GetPullRequests();\\r\\n    Console.WriteLine(pullRequests);\\r\\n    File.WriteAllText(\\\"pr.txt\\\", pullRequests);\\r\\n}\\r\\n\\r\\nawait Main();\"\n",
+      "  \"code\": \"using System;\\r\\nusing System.Net.Http;\\r\\nusing System.Text.Json;\\r\\nusing System.Threading.Tasks;\\r\\n\\r\\nvar apiUrl = \\\"https://api.github.com/repos/dotnet/machinelearning/pulls\\\";\\r\\nvar userAgent = \\\"MyApp\\\";\\r\\n\\r\\nasync Task<string> GetPullRequests()\\r\\n{\\r\\n    using (var client = new HttpClient())\\r\\n    {\\r\\n        client.DefaultRequestHeaders.Add(\\\"User-Agent\\\", userAgent);\\r\\n        var response = await client.GetAsync(apiUrl);\\r\\n        response.EnsureSuccessStatusCode();\\r\\n        var responseBody = await response.Content.ReadAsStringAsync();\\r\\n        return responseBody;\\r\\n    }\\r\\n}\\r\\n\\r\\nasync Task<string> GetLatestPullRequest()\\r\\n{\\r\\n    var pullRequests = await GetPullRequests();\\r\\n    var jsonDocument = JsonDocument.Parse(pullRequests);\\r\\n    var latestPullRequest = jsonDocument.RootElement[0];\\r\\n    return latestPullRequest.ToString();\\r\\n}\\r\\n\\r\\nvar latestPullRequest = await GetLatestPullRequest();\\r\\nConsole.WriteLine(latestPullRequest);\"\n",
       "}\n",
       "Message from Runner\n",
       "--------------------\n",
-      "[{\"url\":\"https://api.github.com/repos/dotnet/machinelearning/pulls/6872\",\"id\":1568971683,\"node_id\":\" (...too long to present)\n",
+      "{\"url\":\"https://api.github.com/repos/dotnet/machinelearning/pulls/6872\",\"id\":1568971683,\"node_id\":\"P (...too long to present)\n",
       "--------------------\n",
       "\n",
       "Message from Admin\n",
       "--------------------\n",
-      "Great job, Runner! You have successfully printed the result to the console and saved the result to a file named \"pr.txt\". The latest pull request is:\n",
+      "Great job, Runner! You have successfully parsed the response JSON and extracted the latest pull request. The latest pull request is:\n",
+      "\n",
       "URL: https://api.github.com/repos/dotnet/machinelearning/pulls/6872\n",
       "ID: 1568971683\n",
       "Node ID: (...too long to present)\n",
       "\n",
-      "Congratulations on completing the task! If there are no further steps to resolve, I will terminate the group chat.\n",
+      "Now, let's move on to the final step: printing the result to the console and saving it to a file named \"pr.txt\".\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "Message from Coder\n",
+      "--------------------\n",
+      "```csharp\n",
+      "using System;\n",
+      "using System.IO;\n",
+      "using System.Net.Http;\n",
+      "using System.Text.Json;\n",
+      "using System.Threading.Tasks;\n",
+      "\n",
+      "var apiUrl = \"https://api.github.com/repos/dotnet/machinelearning/pulls\";\n",
+      "var userAgent = \"MyApp\";\n",
+      "\n",
+      "async Task<string> GetPullRequests()\n",
+      "{\n",
+      "    using (var client = new HttpClient())\n",
+      "    {\n",
+      "        client.DefaultRequestHeaders.Add(\"User-Agent\", userAgent);\n",
+      "        var response = await client.GetAsync(apiUrl);\n",
+      "        response.EnsureSuccessStatusCode();\n",
+      "        var responseBody = await response.Content.ReadAsStringAsync();\n",
+      "        return responseBody;\n",
+      "    }\n",
+      "}\n",
+      "\n",
+      "async Task<string> GetLatestPullRequest()\n",
+      "{\n",
+      "    var pullRequests = await GetPullRequests();\n",
+      "    var jsonDocument = JsonDocument.Parse(pullRequests);\n",
+      "    var latestPullRequest = jsonDocument.RootElement[0];\n",
+      "    return latestPullRequest.ToString();\n",
+      "}\n",
+      "\n",
+      "async Task PrintAndSavePullRequest()\n",
+      "{\n",
+      "    var latestPullRequest = await GetLatestPullRequest();\n",
+      "    Console.WriteLine(latestPullRequest);\n",
+      "    File.WriteAllText(\"pr.txt\", latestPullRequest);\n",
+      "}\n",
+      "\n",
+      "await PrintAndSavePullRequest();\n",
+      "```\n",
+      "\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "function name: RunCode\n",
+      "raw function call: {\n",
+      "  \"code\": \"using System;\\r\\nusing System.IO;\\r\\nusing System.Net.Http;\\r\\nusing System.Text.Json;\\r\\nusing System.Threading.Tasks;\\r\\n\\r\\nvar apiUrl = \\\"https://api.github.com/repos/dotnet/machinelearning/pulls\\\";\\r\\nvar userAgent = \\\"MyApp\\\";\\r\\n\\r\\nasync Task<string> GetPullRequests()\\r\\n{\\r\\n    using (var client = new HttpClient())\\r\\n    {\\r\\n        client.DefaultRequestHeaders.Add(\\\"User-Agent\\\", userAgent);\\r\\n        var response = await client.GetAsync(apiUrl);\\r\\n        response.EnsureSuccessStatusCode();\\r\\n        var responseBody = await response.Content.ReadAsStringAsync();\\r\\n        return responseBody;\\r\\n    }\\r\\n}\\r\\n\\r\\nasync Task<string> GetLatestPullRequest()\\r\\n{\\r\\n    var pullRequests = await GetPullRequests();\\r\\n    var jsonDocument = JsonDocument.Parse(pullRequests);\\r\\n    var latestPullRequest = jsonDocument.RootElement[0];\\r\\n    return latestPullRequest.ToString();\\r\\n}\\r\\n\\r\\nasync Task PrintAndSavePullRequest()\\r\\n{\\r\\n    var latestPullRequest = await GetLatestPullRequest();\\r\\n    Console.WriteLine(latestPullRequest);\\r\\n    File.WriteAllText(\\\"pr.txt\\\", latestPullRequest);\\r\\n}\\r\\n\\r\\nawait PrintAndSavePullRequest();\"\n",
+      "}\n",
+      "Message from Runner\n",
+      "--------------------\n",
+      "{\"url\":\"https://api.github.com/repos/dotnet/machinelearning/pulls/6872\",\"id\":1568971683,\"node_id\":\"P (...too long to present)\n",
+      "--------------------\n",
+      "\n",
+      "Message from Admin\n",
+      "--------------------\n",
+      "Great job, Runner! You have successfully printed the latest pull request to the console and saved it to a file named \"pr.txt\". The latest pull request is:\n",
+      "\n",
+      "URL: https://api.github.com/repos/dotnet/machinelearning/pulls/6872\n",
+      "ID: 1568971683\n",
+      "Node ID: (...too long to present)\n",
+      "\n",
+      "Congratulations on completing the task! If you have any other questions or need further assistance, feel free to ask.\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "Message from Coder\n",
+      "--------------------\n",
+      "[COMPLETE]\n",
+      "--------------------\n",
+      "\n",
+      "Message from Admin\n",
+      "--------------------\n",
+      "Great job, everyone! The task has been successfully completed. Thank you for your collaboration. If you have any other tasks or need further assistance, feel free to ask.\n",
+      "--------------------\n",
+      "\n",
+      "Message from Runner\n",
+      "--------------------\n",
+      "Thank you for your feedback! I'm glad I could help. If you have any other tasks or need assistance in the future, don't hesitate to reach out. Have a great day!\n",
+      "--------------------\n",
+      "\n",
+      "Message from Admin\n",
+      "--------------------\n",
+      "Thank you, Runner! I appreciate your help and willingness to assist. If there are any other tasks or projects in the future, I will definitely reach out to you. Have a wonderful day!\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "Message from Coder\n",
+      "--------------------\n",
+      "Thank you both for your collaboration! It was a pleasure working with you. If you need any further assistance or have any other tasks in the future, feel free to reach out. Have a great day!\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "Message from Admin\n",
+      "--------------------\n",
+      "Thank you, Coder! It was a pleasure working with you as well. Your collaboration and assistance were greatly appreciated. If there are any other tasks or projects in the future, I will definitely reach out to you. Have a fantastic day!\n",
+      "\n",
+      "\n",
       "--------------------\n",
       "\n",
       "function name: TerminateGroupChat\n",
       "raw function call: {\n",
-      "  \"message\": \"Task completed successfully. Group chat terminated.\"\n",
+      "  \"message\": \"Group chat terminated.\"\n",
       "}\n",
       "Message from Admin\n",
       "--------------------\n",
-      "[GROUPCHAT_TERMINATE]: Task completed successfully. Group chat terminated.\n",
+      "[GROUPCHAT_TERMINATE]: Group chat terminated.\n",
       "--------------------\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "var conversation = await admin.SendMessageToGroupAsync(\"Here's the first step to resolve: Send a GET request to the GitHub API to retrieve the list of pull requests for the mlnet repo.\", groupChat, 30, false);"
+    "var conversation = await admin.SendMessageToGroupAsync(groupChat, \"Here's the first step to resolve: Send a GET request to the GitHub API to retrieve the list of pull requests for the mlnet repo.\", 30, false);"
    ]
   }
  ],
