--- a/notebook/TwoAgentChat_Coding.ipynb
+++ b/notebook/TwoAgentChat_Coding.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "### TwoAgenChat with coding\n",
     "\n",
-    "This notebook shows how to use a `NotebookUserAgent` and a `GPTAgent` to implement a back-and-force coding-debuging conversation."
+    "This notebook shows how to use a `coder` agent and a `runner` agent to implement a back-and-force coding-debuging conversation."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Install dependencies"
+    "### Step 1: Install dependencies"
    ]
   },
   {
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.4-6632871122</span></li><li><span>AgentChat.DotnetInteractiveFunction, 0.2.4-6632871122</span></li><li><span>AgentChat.Example.Share, 0.2.4-6632871122</span></li><li><span>AgentChat.GPT, 0.2.4-6632871122</span></li></ul></div></div>"
+       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.7</span></li><li><span>AgentChat.DotnetInteractiveFunction, 0.2.7</span></li><li><span>AgentChat.Example.Share, 0.2.7</span></li><li><span>AgentChat.GPT, 0.2.7</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -55,8 +55,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1: Create a NotebookUserAgent\n",
-    "The first step we are going to do is to define a `NotebookUserAgent` that will be used to take input from user and send it to the coding agent."
+    "### Step 2: Create a Coding Agent\n",
+    "Then we are going to create a `GPTAgent` that will be used to write dotnet script code to resolve the user's problem."
    ]
   },
   {
@@ -77,34 +77,34 @@
    "source": [
     "using AgentChat.Example.Share;\n",
     "using AgentChat;\n",
+    "using System.Text.Json;\n",
+    "using Azure.AI.OpenAI;\n",
     "\n",
-    "IAgent user = new NotebookUserAgent(\"User\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 2: Create a Coding Agent\n",
-    "Then we are going to create a `GPTAgent` that will be used to write dotnet script code to resolve the user's problem."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "var completeFunction = new FunctionDefinition{\n",
+    "    Name = \"TaskComplete\",\n",
+    "    Description = \"task complete\",\n",
+    "    Parameters = BinaryData.FromObjectAsJson(new\n",
+    "    {\n",
+    "        Type = \"object\",\n",
+    "        Properties = new\n",
+    "\t\t{\n",
+    "\t\t    msg = new\n",
+    "\t\t    {\n",
+    "\t\t\t    Type = @\"string\",\n",
+    "\t\t\t    Description = @\"msg\",\n",
+    "\t\t    },\n",
+    "        },\n",
+    "        Required = new []\n",
+    "\t\t{\n",
+    "\t\t    \"msg\",\n",
+    "\t\t},\n",
+    "    },\n",
+    "    new JsonSerializerOptions\n",
+    "\t{\n",
+    "\t\tPropertyNamingPolicy = JsonNamingPolicy.CamelCase,\n",
+    "\t}),\n",
+    "};\n",
+    "\n",
     "var coder = Constant.GPT35.CreateAgent(\n",
     "    name: \"Coder\",\n",
     "    roleInformation: @\"You act as dotnet coder, you write dotnet script to resolve task.\n",
@@ -114,7 +114,7 @@
     "if code_has_error\n",
     "    fix_code_error\n",
     "\n",
-    "if task_complete, say [COMPLETE]\n",
+    "if task_complete, call TaskComplete\n",
     "\n",
     "-end-\n",
     "\n",
@@ -140,7 +140,10 @@
     "```csharp\n",
     "xxx\n",
     "```\",\n",
-    "    temperature: 0);"
+    "    temperature: 0,\n",
+    "    functionMap: new Dictionary<FunctionDefinition, Func<string, Task<string>>> {\n",
+    "        { completeFunction, async (args) => \"[COMPLETE]\"}\n",
+    "    });"
    ]
   },
   {
@@ -154,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -170,7 +173,6 @@
    "source": [
     "using System.IO;\n",
     "using AgentChat.DotnetInteractiveService;\n",
-    "using Azure.AI.OpenAI;\n",
     "using System.Text.Json;\n",
     "\n",
     "var workDir = Path.Combine(Path.GetTempPath(), \"InteractiveService\");\n",
@@ -242,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -261,7 +263,7 @@
      "text": [
       "function name: Greeting\n",
       "raw function call: {\n",
-      "  \"greeting\": \"Hello! How can I assist you today?\"\n",
+      "  \"greeting\": \"hello\"\n",
       "}\n",
       "Message from Runner\n",
       "--------------------\n",
@@ -270,17 +272,19 @@
       "\n",
       "function name: RunCode\n",
       "raw function call: {\n",
-      "  \"code\": \"Console.WriteLine(\\\"Hello World!!!\\\")\"\n",
+      "  \"code\": \"Console.WriteLine(1+1+1);\"\n",
       "}\n",
       "Message from Runner\n",
       "--------------------\n",
-      "Hello World!!!\n",
+      "3\n",
       "\n",
       "--------------------\n",
       "\n",
       "function name: InstallNugetPackages\n",
       "raw function call: {\n",
-      "  \"nugetPackages\": [\"Microsoft.ML\"]\n",
+      "  \"nugetPackages\": [\n",
+      "    \"Microsoft.ML\"\n",
+      "  ]\n",
       "}\n",
       "Message from Runner\n",
       "--------------------\n",
@@ -294,26 +298,16 @@
    ],
    "source": [
     "// runner should respond with NO_CODE_AVAILABLE\n",
-    "var greeting = new Message(ChatRole.User, \"Hello\", from: user.Name);\n",
-    "await user.SendMessageToAgentAsync(\n",
-    "    runner,\n",
-    "    new [] {greeting},\n",
-    "    maxRound: 1);\n",
+    "var msg = await runner.SendMessageAsync(\"hello\");\n",
+    "msg.PrettyPrintMessage();\n",
     "\n",
     "// runner should run code\n",
-    "var someCodeMessage = new Message(ChatRole.User, @\"Console.WriteLine(\"\"Hello World!!!\"\")\", from: user.Name);\n",
-    "await user.SendMessageToAgentAsync(\n",
-    "    runner,\n",
-    "    new [] {someCodeMessage},\n",
-    "    maxRound: 1);\n",
+    "msg = await runner.SendMessageAsync(\"```csharp\\nConsole.WriteLine(1+1+1);\\n```\");\n",
+    "msg.PrettyPrintMessage();\n",
     "\n",
     "// runner should install nuget packages\n",
-    "var installNugetPackagesMessage = new Message(ChatRole.User, @\"nuget install Microsoft.ML\", from: user.Name);\n",
-    "\n",
-    "await user.SendMessageToAgentAsync(\n",
-    "    runner,\n",
-    "    new [] {installNugetPackagesMessage},\n",
-    "    maxRound: 1);"
+    "msg = await runner.SendMessageAsync(\"```nuget\\nMicrosoft.ML\\n```\");\n",
+    "msg.PrettyPrintMessage();"
    ]
   },
   {
@@ -335,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -355,74 +349,135 @@
       "Message from Coder\n",
       "--------------------\n",
       "```csharp\n",
-      "int n = 10;\n",
-      "int fib1 = 0;\n",
-      "int fib2 = 1;\n",
-      "int fibN = 0;\n",
+      "using System;\n",
       "\n",
-      "for (int i = 2; i <= n; i++)\n",
+      "int Fibonacci(int n)\n",
       "{\n",
-      "    fibN = fib1 + fib2;\n",
-      "    fib1 = fib2;\n",
-      "    fib2 = fibN;\n",
+      "    if (n <= 1)\n",
+      "        return n;\n",
+      "    else\n",
+      "        return Fibonacci(n - 1) + Fibonacci(n - 2);\n",
       "}\n",
       "\n",
-      "Console.WriteLine($\"The 10th Fibonacci number is: {fibN}\");\n",
+      "int n = 10;\n",
+      "int result = Fibonacci(n);\n",
+      "\n",
+      "Console.WriteLine($\"What's the {n}th of Fibonacci?\");\n",
+      "Console.WriteLine($\"The {n}th of Fibonacci is: {result}\");\n",
       "```\n",
+      "\n",
       "--------------------\n",
       "\n",
       "function name: RunCode\n",
       "raw function call: {\n",
-      "  \"code\": \"int n = 10;\\nint fib1 = 0;\\nint fib2 = 1;\\nint fibN = 0;\\n\\nfor (int i = 2; i <= n; i++)\\n{\\n    fibN = fib1 + fib2;\\n    fib1 = fib2;\\n    fib2 = fibN;\\n}\\n\\nConsole.WriteLine($\\\"The 10th Fibonacci number is: {fibN}\\\");\"\n",
+      "  \"code\": \"using System;\\n\\nint Fibonacci(int n)\\n{\\n    if (n <= 1)\\n        return n;\\n    else\\n        return Fibonacci(n - 1) + Fibonacci(n - 2);\\n}\\n\\nint n = 10;\\nint result = Fibonacci(n);\\n\\nConsole.WriteLine($\\\"What's the {n}th of Fibonacci?\\\");\\nConsole.WriteLine($\\\"The {n}th of Fibonacci is: {result}\\\");\"\n",
       "}\n",
       "Message from Runner\n",
       "--------------------\n",
-      "The 10th Fibonacci number is: 55\n",
+      "What's the 10th of Fibonacci?\n",
+      "\n",
+      "The 10th of Fibonacci is: 55\n",
       "\n",
       "--------------------\n",
       "\n",
       "Message from Coder\n",
       "--------------------\n",
+      "```csharp\n",
+      "int Fibonacci(int n)\n",
+      "{\n",
+      "    if (n <= 1)\n",
+      "        return n;\n",
+      "    else\n",
+      "        return Fibonacci(n - 1) + Fibonacci(n - 2);\n",
+      "}\n",
+      "\n",
+      "int n = 10;\n",
+      "int result = Fibonacci(n);\n",
+      "\n",
+      "Console.WriteLine($\"What's the {n}th of Fibonacci?\");\n",
+      "Console.WriteLine($\"The {n}th of Fibonacci is: {result}\");\n",
+      "```\n",
+      "\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "function name: RunCode\n",
+      "raw function call: {\n",
+      "  \"code\": \"int Fibonacci(int n)\\r\\n{\\r\\n    if (n <= 1)\\r\\n        return n;\\r\\n    else\\r\\n        return Fibonacci(n - 1) + Fibonacci(n - 2);\\r\\n}\\r\\n\\r\\nint n = 10;\\r\\nint result = Fibonacci(n);\\r\\n\\r\\nConsole.WriteLine($\\\"What's the {n}th of Fibonacci?\\\");\\r\\nConsole.WriteLine($\\\"The {n}th of Fibonacci is: {result}\\\");\"\n",
+      "}\n",
+      "Message from Runner\n",
+      "--------------------\n",
+      "What's the 10th of Fibonacci?\n",
+      "\n",
+      "The 10th of Fibonacci is: 55\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "Message from Coder\n",
+      "--------------------\n",
+      "```csharp\n",
+      "int Fibonacci(int n)\n",
+      "{\n",
+      "    if (n <= 1)\n",
+      "        return n;\n",
+      "    else\n",
+      "        return Fibonacci(n - 1) + Fibonacci(n - 2);\n",
+      "}\n",
+      "\n",
+      "int n = 10;\n",
+      "int result = Fibonacci(n);\n",
+      "\n",
+      "Console.WriteLine($\"What's the {n}th of Fibonacci?\");\n",
+      "Console.WriteLine($\"The {n}th of Fibonacci is: {result}\");\n",
+      "```\n",
+      "\n",
+      "\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "function name: RunCode\n",
+      "raw function call: {\n",
+      "  \"code\": \"int Fibonacci(int n)\\r\\n{\\r\\n    if (n <= 1)\\r\\n        return n;\\r\\n    else\\r\\n        return Fibonacci(n - 1) + Fibonacci(n - 2);\\r\\n}\\r\\n\\r\\nint n = 10;\\r\\nint result = Fibonacci(n);\\r\\n\\r\\nConsole.WriteLine($\\\"What's the {n}th of Fibonacci?\\\");\\r\\nConsole.WriteLine($\\\"The {n}th of Fibonacci is: {result}\\\");\"\n",
+      "}\n",
+      "Message from Runner\n",
+      "--------------------\n",
+      "What's the 10th of Fibonacci?\n",
+      "\n",
+      "The 10th of Fibonacci is: 55\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "function name: TaskComplete\n",
+      "raw function call: {\n",
+      "  \"msg\": \"The 10th of Fibonacci is: 55\"\n",
+      "}\n",
+      "Message from Coder\n",
+      "--------------------\n",
       "[COMPLETE]\n",
       "--------------------\n",
+      "\n",
+      "Message from \n",
+      "--------------------\n",
+      "[GROUPCHAT_TERMINATE]\n",
+      "--------------------\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "Error",
-     "evalue": "System.NullReferenceException: Object reference not set to an instance of an object.\r\n   at Microsoft.DotNet.Interactive.Kernel.get_Root()\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint, String valueName)\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint, String valueName)\r\n   at AgentChat.Example.Share.NotebookUserAgent.CallAsync(IEnumerable`1 messages, CancellationToken ct)\r\n   at AgentChat.AutoReplyAgent.CallAsync(IEnumerable`1 conversation, CancellationToken ct)\r\n   at AgentChat.SequentialGroupChat.CallAsync(IEnumerable`1 conversationWithName, Int32 maxRound, Boolean throwExceptionWhenMaxRoundReached)\r\n   at AgentChat.AgentExtension.SendMessageToAgentAsync(IAgent agent, IAgent receiver, IEnumerable`1 chatHistory, Int32 maxRound, Boolean throwWhenMaxRoundReached, CancellationToken ct)\r\n   at Submission#11.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
-     "output_type": "error",
-     "traceback": [
-      "System.NullReferenceException: Object reference not set to an instance of an object.\r\n",
-      "   at Microsoft.DotNet.Interactive.Kernel.get_Root()\r\n",
-      "   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint, String valueName)\r\n",
-      "   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint, String valueName)\r\n",
-      "   at AgentChat.Example.Share.NotebookUserAgent.CallAsync(IEnumerable`1 messages, CancellationToken ct)\r\n",
-      "   at AgentChat.AutoReplyAgent.CallAsync(IEnumerable`1 conversation, CancellationToken ct)\r\n",
-      "   at AgentChat.SequentialGroupChat.CallAsync(IEnumerable`1 conversationWithName, Int32 maxRound, Boolean throwExceptionWhenMaxRoundReached)\r\n",
-      "   at AgentChat.AgentExtension.SendMessageToAgentAsync(IAgent agent, IAgent receiver, IEnumerable`1 chatHistory, Int32 maxRound, Boolean throwWhenMaxRoundReached, CancellationToken ct)\r\n",
-      "   at Submission#11.<<Initialize>>d__0.MoveNext()\r\n",
-      "--- End of stack trace from previous location ---\r\n",
-      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
      ]
     }
    ],
    "source": [
     "// use runner agent to auto-reply message from coder\n",
-    "user = user.WithAutoReply(async (msgs) => {\n",
+    "var user = runner.WithAutoReply(async (msgs) => {\n",
     "    // if last message contains \"COMPLETE\", stop sending messages to runner agent and fall back to user agent\n",
-    "    if (msgs.Last().Content.Contains(\"COMPLETE\"))\n",
-    "        return null; // return null to fall back to user agent\n",
+    "    if (msgs.Last().Content.Contains(\"[COMPLETE]\"))\n",
+    "        return new Message(ChatRole.Assistant, GroupChatFunction.TERMINATE); // return TERMINATE to stop conversation\n",
     "    \n",
     "    // otherwise, send message to runner agent to either run code or install nuget packages and get the reply\n",
-    "    return await runner.SendMessageAsync(msgs);\n",
+    "    return await runner.SendMessageAsync(msgs.Last());\n",
     "});\n",
-    "\n",
-    "var codingTask = new Message(ChatRole.User, \"what's the 10th of fibonacci? Print the question and result in the end.\", from: user.Name);\n",
     "\n",
     "await user.SendMessageToAgentAsync(\n",
     "    coder,\n",
-    "    new [] {codingTask},\n",
+    "    \"what's the 10th of fibonacci? Print the question and result in the end.\",\n",
     "    maxRound: 10);"
    ]
   }
