--- a/notebook/TwoAgentChat_MathClass.ipynb
+++ b/notebook/TwoAgentChat_MathClass.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.0-6606840838</span></li><li><span>AgentChat.GPT, 0.2.0-6606840838</span></li></ul></div></div>"
+       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.5</span></li><li><span>AgentChat.GPT, 0.2.5</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -143,24 +143,24 @@
       "--------------------\n",
       "Great! Here's the first question:\n",
       "\n",
-      "Question 1: How many sides does a triangle have?\n",
+      "What is 2 + 3?\n",
       "\n",
       "Please provide your answer.\n",
       "--------------------\n",
       "\n",
       "Message from Bob\n",
       "--------------------\n",
-      "A triangle has 3 sides.\n",
+      "The answer to 2 + 3 is 5.\n",
       "\n",
       "--------------------\n",
       "\n",
       "Message from Alice\n",
       "--------------------\n",
-      "That's correct! A triangle indeed has 3 sides. Well done!\n",
+      "That's correct! Well done!\n",
       "\n",
-      "Now, let's move on to the next question:\n",
+      "Now, here's the second question:\n",
       "\n",
-      "Question 2: What is the sum of 2 and 3?\n",
+      "What is 4 - 2?\n",
       "\n",
       "Please provide your answer.\n",
       "\n",
@@ -168,18 +168,18 @@
       "\n",
       "Message from Bob\n",
       "--------------------\n",
-      "The sum of 2 and 3 is 5.\n",
+      "The answer to 4 - 2 is 2.\n",
       "\n",
       "\n",
       "--------------------\n",
       "\n",
       "Message from Alice\n",
       "--------------------\n",
-      "Great job! You are absolutely correct. The sum of 2 and 3 is indeed 5.\n",
+      "Great job! You're doing well!\n",
       "\n",
-      "Now, let's move on to the final question:\n",
+      "Now, here's the third and final question:\n",
       "\n",
-      "Question 3: How many fingers does a person have on one hand?\n",
+      "What is 3 x 2?\n",
       "\n",
       "Please provide your answer.\n",
       "\n",
@@ -188,18 +188,20 @@
       "\n",
       "Message from Bob\n",
       "--------------------\n",
-      "A person has 5 fingers on one hand.\n",
+      "The answer to 3 x 2 is 6.\n",
       "\n",
       "\n",
       "--------------------\n",
       "\n",
       "Message from Alice\n",
       "--------------------\n",
-      "Well done! You are absolutely correct. A person has 5 fingers on one hand.\n",
+      "Fantastic! You got it right again!\n",
       "\n",
-      "Congratulations on answering all the questions correctly! You did a fantastic job.\n",
+      "Congratulations on answering all the math questions correctly! You did a great job!\n",
       "\n",
-      "Thank you for participating in this math challenge. If you have any more questions or need further assistance, feel free to ask.\n",
+      "Keep up the good work and continue practicing your math skills. If you have any more questions or need help with anything else, feel free to ask.\n",
+      "\n",
+      "Have a wonderful day!\n",
       "\n",
       "[GROUPCHAT_TERMINATE]\n",
       "--------------------\n",
@@ -211,13 +213,13 @@
     "using System.Linq;\n",
     "\n",
     "var conversation = Enumerable.Empty<IChatMessage>();\n",
-    "conversation = await alice.SendMessageAsync(bob, @\"I'm going to give you 3 math question,\n",
+    "conversation = await alice.SendMessageToAgentAsync(bob, @\"I'm going to give you 3 math question,\n",
     "one question at a time.\n",
     "You are going to answer it.\n",
     "If your answer is correct,\n",
     "I'll give you the next question.\n",
-    "If all questions being resolved, I'll terminate the chat by saying [GROUPCHAT_TERMINATE]\", conversation, maxRound: 1, throwWhenMaxRoundReached: false);\n",
-    "conversation = await bob.SendMessageAsync(alice, \"Ok\", conversation, maxRound: 14, throwWhenMaxRoundReached: false);"
+    "If all questions being resolved, I'll terminate the chat by saying [GROUPCHAT_TERMINATE]\", maxRound: 1);\n",
+    "conversation = await bob.SendMessageToAgentAsync(alice, conversation, maxRound: 14);"
    ]
   },
   {
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -245,7 +247,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"dni-plaintext\"><pre>10</pre></div><style>\r\n",
+       "<div class=\"dni-plaintext\"><pre>9</pre></div><style>\r\n",
        ".dni-code-hint {\r\n",
        "    font-style: italic;\r\n",
        "    overflow: hidden;\r\n",
