--- a/notebook/TwoAgentChat_UserPorxy.ipynb
+++ b/notebook/TwoAgentChat_UserPorxy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.0-6631217245</span></li><li><span>AgentChat.Example.Share, 0.2.0-6631217245</span></li><li><span>AgentChat.GPT, 0.2.0-6631217245</span></li></ul></div></div>"
+       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.6</span></li><li><span>AgentChat.Example.Share, 0.2.6</span></li><li><span>AgentChat.GPT, 0.2.6</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -54,14 +54,12 @@
    "metadata": {},
    "source": [
     "### Define a UserAgent\n",
-    "To define a UserAgent that takes input from user, we can implement `IAgent` interface and define 'CallAsync' method.\n",
-    "\n",
-    ">Note: This class is also available in `AgentChat.Example.Share` with the name `NotebookUserAgent`"
+    "To define a UserAgent that takes input from user, we can implement `IAgent` interface and define 'CallAsync' method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -78,6 +76,7 @@
     "using System.Threading;\n",
     "using Microsoft.DotNet.Interactive;\n",
     "using Azure.AI.OpenAI;\n",
+    "using AgentChat;\n",
     "\n",
     "public class UserAgent : IAgent\n",
     "{\n",
@@ -107,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -119,10 +118,18 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(2,17): error CS0234: The type or namespace name 'Core' does not exist in the namespace 'AgentChat' (are you missing an assembly reference?)\r\n(4,21): error CS0246: The type or namespace name 'UserAgent' could not be found (are you missing a using directive or an assembly reference?)",
+     "output_type": "error",
+     "traceback": [
+      "(2,17): error CS0234: The type or namespace name 'Core' does not exist in the namespace 'AgentChat' (are you missing an assembly reference?)\r\n",
+      "(4,21): error CS0246: The type or namespace name 'UserAgent' could not be found (are you missing a using directive or an assembly reference?)"
+     ]
+    }
+   ],
    "source": [
-    "using AgentChat;\n",
-    "using AgentChat.Core;\n",
     "using AgentChat.Example.Share;\n",
     "var userAgent = new UserAgent(\"Human\");\n",
     "var gptAgent = Constant.GPT35.CreateAgent(\n",
@@ -139,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -153,28 +160,12 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Message from GPT\n",
-      "--------------------\n",
-      "Hello! How can I assist you today?\n",
-      "--------------------\n",
-      "\n",
-      "Message from Human\n",
-      "--------------------\n",
-      "Tell me a joke\n",
-      "--------------------\n",
-      "\n",
-      "Message from GPT\n",
-      "--------------------\n",
-      "Sure, here's a joke for you:\n",
-      "\n",
-      "Why don't scientists trust atoms?\n",
-      "\n",
-      "Because they make up everything!\n",
-      "--------------------\n",
-      "\n"
+     "ename": "Error",
+     "evalue": "(1,26): error CS0103: The name 'userAgent' does not exist in the current context\r\n(2,15): error CS0103: The name 'gptAgent' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(1,26): error CS0103: The name 'userAgent' does not exist in the current context\r\n",
+      "(2,15): error CS0103: The name 'gptAgent' does not exist in the current context"
      ]
     }
    ],
